Add '.cache' to Makefile's 'clean' target

--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -66,6 +66,7 @@ review:
 
 .PHONY: clean
 clean:
+	$(RM) --recursive ./.cache
 	$(RM) --recursive ./build
 	$(RM) --recursive ./dist
 	find $(source_dir) -name "*.pyc" -type f -exec $(RM) {} +
