Add *.dist-info" in ".gitignore" and "Makefile"

--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -69,6 +69,7 @@ clean:
 	$(RM) --recursive ./.cache
 	$(RM) --recursive ./build
 	$(RM) --recursive ./dist
+	find $(source_dir) -name '*.dist-info' -type d -exec $(RM) --recursive {} +
 	find $(source_dir) -name '*.egg-info' -type d -exec $(RM) --recursive {} +
 	find $(source_dir) -name '*.pyc' -type f -exec $(RM) {} +
 	find $(tests_dir) -name '*.pyc' -type f -exec $(RM) {} +
