Make the project metadata check more strict

--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -1,8 +1,13 @@
 #
 
 
-[tool:pytest]
+[check]
+metadata=1
+restructuredtext=1
+strict=1
 
+
+[tool:pytest]
 addopts =
     --pylint-error-types='CEFIRW'
 
