Move 'pex-args' from 'Makefile' to 'setup.cfg'

--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -37,8 +37,7 @@ wheel:
 
 .PHONY: pex
 pex:
-	python setup.py bdist_pex\
-		--pex-args='--requirement="requirements.txt"'
+	python setup.py bdist_pex
 
 
 .PHONY: check
