Use 'python3' explicitly in the Makefile rules
This may prevent some suprises where the wrong binary is called.

--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -10,7 +10,7 @@ tests_dir := ./test
 
 .PHONY: develop
 develop:
-	python setup.py develop
+	python3 setup.py develop
 
 
 .PHONY: package
@@ -19,32 +19,32 @@ package: sdist wheel
 
 .PHONY: sdist
 sdist:
-	python setup.py sdist
+	python3 setup.py sdist
 
 
 .PHONY: wheel
 wheel:
-	python setup.py bdist_wheel
+	python3 setup.py bdist_wheel
 
 
 .PHONY: check
 check:
-	python setup.py check --restructuredtext
+	python3 setup.py check --restructuredtext
 
 
 .PHONY: lint
 lint:
-	pytest --pep8 --pylint -m 'pep8 or pylint'
+	python3 -m pytest --pep8 --pylint -m 'pep8 or pylint'
 
 
 .PHONY: pep8
 pep8:
-	pytest --pep8 -m pep8
+	python3 -m pytest --pep8 -m pep8
 
 
 .PHONY: pylint
 pylint:
-	pytest --pylint -m pylint
+	python3 -m pytest --pylint -m pylint
 
 
 .PHONY: test
@@ -53,12 +53,12 @@ test: pytest
 
 .PHONY: pytest
 pytest:
-	pytest
+	python3 -m pytest
 
 
 .PHONY: review
 review: check
-	pytest --pep8 --pylint
+	python3 -m pytest --pep8 --pylint
 
 
 .PHONY: clean
