Reorganize Makefile targets 'check' and 'review'

--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -14,23 +14,24 @@ develop:
 
 
 .PHONY: package
-package: sdist wheel check
+package: sdist wheel
 
 
 .PHONY: sdist
 sdist:
 	python3 setup.py sdist
+	python3 -m twine check dist/*.tar.gz
 
 
 .PHONY: wheel
 wheel:
 	python3 setup.py bdist_wheel
+	python3 -m twine check dist/*.whl
 
 
 .PHONY: check
-check: sdist wheel
-	python3 -m twine check dist/*.tar.gz
-	python3 -m twine check dist/*.whl
+check:
+	python3 setup.py check
 
 
 .PHONY: lint
