Move setuptools config from setup.py to setup.cfg

--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -6,6 +6,38 @@ metadata = 1
 strict = 1
 
 
+[metadata]
+author = {{cookiecutter.author}}
+author_email = {{cookiecutter.author_email}}
+description = {{cookiecutter.project_name}} library
+license = Apache-2.0
+long_description = file: README.rst
+name = {{cookiecutter.project_name}}
+url = {{cookiecutter.url}}
+
+
+[options]
+install_requires =
+    setuptools  # needed for 'pkg_resources'
+package_dir =
+    = src
+packages = find:
+
+
+[options.extras_require]
+package =
+    twine
+    wheel
+test =
+    pytest
+    pytest-pep8
+    pytest-pylint
+
+
+[options.packages.find]
+where = src
+
+
 [tool:pytest]
 addopts =
     --pylint-error-types='CEFIRW'
