Add template for an application

--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -9,7 +9,7 @@ strict = 1
 [metadata]
 author = {{cookiecutter.author}}
 author_email = {{cookiecutter.author_email}}
-description = {{cookiecutter.project_name}} Pyramid application
+description = {{cookiecutter.project_name}} application
 license = Apache-2.0
 long_description = file: README.rst
 long_description_content_type = text/x-rst
@@ -19,9 +19,7 @@ url = {{cookiecutter.url}}
 
 [options]
 install_requires =
-    pyramid
     setuptools  # needed for 'pkg_resources'
-    waitress
 package_dir =
     = src
 packages = find:
@@ -29,9 +27,7 @@ packages = find:
 
 [options.entry_points]
 console_scripts =
-    {{cookiecutter.project_name}} = pyramid.scripts.pserve:main
-paste.app_factory =
-    main_entry_point = {{cookiecutter.main_package_name}}.main:entry_point
+    {{cookiecutter.project_name}} = {{cookiecutter.main_package_name}}.cli:main
 
 
 [options.extras_require]
@@ -43,7 +39,6 @@ test =
     pytest
     pytest-pep8
     pytest-pylint
-    WebTest
 
 
 [options.packages.find]
