--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -19,7 +19,7 @@ url = {{cookiecutter.url}}
 
 [options]
 install_requires =
-    setuptools  # needed for 'pkg_resources'
+    importlib_metadata
 package_dir =
     = src
 packages = find:
