Add 'license_file' metadata in 'setup.cfg'

--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -11,6 +11,7 @@ author = {{cookiecutter.author}}
 author_email = {{cookiecutter.author_email}}
 description = {{cookiecutter.project_name}} library
 license = Apache-2.0
+license_file = LICENSE.txt
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 name = {{cookiecutter.project_name}}
