Add 'project_urls' metadata in 'setup.cfg'

--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -15,6 +15,9 @@ license_file = LICENSE.txt
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 name = {{cookiecutter.project_name}}
+project_urls =
+    GitLab = https://gitlab.com/{{cookiecutter.author}}/{{cookiecutter.project_name}}
+    GitHub = https://github.com/{{cookiecutter.author}}/{{cookiecutter.project_name}}
 url = {{cookiecutter.url}}
 
 
