Add '--warn-undefined-variables' to 'MAKEFLAGS'

--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -87,7 +87,7 @@ clean:
 #
 
 # Disable default rules and suffixes (improve speed and avoid unexpected behaviour)
-MAKEFLAGS := --no-builtin-rules
+MAKEFLAGS := --no-builtin-rules --warn-undefined-variables
 .SUFFIXES:
 
 
