Fix dependency project name 'importlib-metadata'

--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -23,7 +23,7 @@ url = {{cookiecutter.url}}
 
 [options]
 install_requires =
-    importlib_metadata
+    importlib-metadata
 package_dir =
     = src
 packages = find:
