Use lower case project name for the console script

--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -33,7 +33,7 @@ packages = find:
 
 [options.entry_points]
 console_scripts =
-    {{cookiecutter.project_name}} = pyramid.scripts.pserve:main
+    {{cookiecutter.project_name | lower}} = pyramid.scripts.pserve:main
 paste.app_factory =
     main_entry_point = {{cookiecutter.main_package_name}}.main:entry_point
 
