--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -37,6 +37,8 @@ test =
     pytest
     pytest-pycodestyle
     pytest-pylint
+    pytest-yapf3
+    yapf
 
 
 [options.packages.find]
@@ -45,7 +47,9 @@ where = src
 
 [tool:pytest]
 addopts =
+    --disable-pytest-warnings
     --pylint-error-types='CEFIRW'
+    --yapfdiff
 
 
 # EOF
