Improve handling of PEP 517

--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -6,6 +6,8 @@ envlist =
     py36
     py37
 isolated_build = True
+requires =
+    tox-pip-version
 
 
 [testenv]
@@ -13,6 +15,7 @@ commands =
     make review
 extras =
     test
+pip_version = pip>=19.0
 whitelist_externals =
     make
 
