--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -45,12 +45,17 @@ check:
 
 .PHONY: lint
 lint:
-	python3 -m pytest --pycodestyle --pylint --yapf -m 'pycodestyle or pylint or yapf'
+	python3 -m pytest --pycodestyle --pydocstyle --pylint --yapf -m 'pycodestyle or pydocstyle or pylint or yapf'
 
 
 .PHONY: pycodestyle
 pycodestyle:
 	python3 -m pytest --pycodestyle -m pycodestyle
+
+
+.PHONY: pydocstyle
+pydocstyle:
+	python3 -m pytest --pydocstyle -m pydocstyle
 
 
 .PHONY: pylint
@@ -74,7 +79,7 @@ pytest:
 
 .PHONY: review
 review: check
-	python3 -m pytest --pycodestyle --pylint --yapf
+	python3 -m pytest --pycodestyle --pydocstyle --pylint --yapf
 
 
 .PHONY: clean
