--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -34,7 +34,9 @@ package =
     twine
     wheel
 test =
+    pydocstyle
     pytest
+    pytest-pydocstyle
     pytest-pycodestyle
     pytest-pylint
     pytest-yapf3
