--- a/{{cookiecutter.project_name}}/.travis.yml
+++ b/{{cookiecutter.project_name}}/.travis.yml
@@ -11,7 +11,7 @@ python:
   - '3.8'
 
 install:
-  - 'python3 -m pip install tox tox-travis tox-venv'
+  - 'python3 -m pip install tox tox-travis'
 
 script:
   - 'python3 -m tox'
