--- a/{{cookiecutter.project_name}}/.travis.yml
+++ b/{{cookiecutter.project_name}}/.travis.yml
@@ -9,6 +9,7 @@ python:
   - '3.6'
   - '3.7'
   - '3.8'
+  - '3.9-dev'
 
 install:
   - 'python3 -m pip install tox tox-travis'
@@ -24,14 +25,14 @@ deploy:
     file: 'dist/*'
     skip_cleanup: true
     on:
-      python: '3.6'
+      python: '3.8'
       tags: true
   - provider: 'pypi'
     distributions: 'sdist bdist_wheel'
     user: '${PYPI_USER}'
     password: '${PYPI_PASSWORD}'
     on:
-      python: '3.6'
+      python: '3.8'
       tags: true
 
 sudo: false
