--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -5,6 +5,8 @@
 envlist =
     py36
     py37
+    py38
+    py39
 isolated_build = True
 
 
@@ -15,6 +17,10 @@ extras =
     test
 whitelist_externals =
     make
+
+
+[testenv:py39]
+ignore_outcome = True
 
 
 [testenv:package]
