Namespace development extras with 'dev_' prefix

--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -30,10 +30,10 @@ packages = find:
 
 
 [options.extras_require]
-package =
+dev_package =
     twine
     wheel
-test =
+dev_test =
     pydocstyle
     pytest
     pytest-pydocstyle
