--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -14,7 +14,7 @@ isolated_build = True
 commands =
     make review
 extras =
-    test
+    dev_test
 whitelist_externals =
     make
 
@@ -27,14 +27,14 @@ ignore_outcome = True
 commands =
     make package
 extras =
-    package
+    dev_package
 
 
 [testenv:develop]
 commands =
 extras =
-    package
-    test
+    dev_package
+    dev_test
 usedevelop = True
 
 
