Fix 'dev_test' dependencies

--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -34,10 +34,12 @@ dev_package =
     twine
     wheel
 dev_test =
+    pycodestyle
     pydocstyle
+    pylint
     pytest
-    pytest-pydocstyle
     pytest-pycodestyle
+    pytest-pydocstyle
     pytest-pylint
     pytest-yapf3
     yapf
