Remove yapf from default lint targets in Makefile

--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -45,7 +45,7 @@ check:
 
 .PHONY: lint
 lint:
-	python3 -m pytest --pycodestyle --pydocstyle --pylint --yapf -m 'pycodestyle or pydocstyle or pylint or yapf'
+	python3 -m pytest --pycodestyle --pydocstyle --pylint -m 'pycodestyle or pydocstyle or pylint'
 
 
 .PHONY: pycodestyle
@@ -79,7 +79,7 @@ pytest:
 
 .PHONY: review
 review: check
-	python3 -m pytest --pycodestyle --pydocstyle --pylint --yapf
+	python3 -m pytest --pycodestyle --pydocstyle --pylint
 
 
 .PHONY: clean
