--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -34,10 +34,12 @@ dev_package =
     twine
     wheel
 dev_test =
+    mypy
     pycodestyle
     pydocstyle
     pylint
     pytest
+    pytest-mypy
     pytest-pycodestyle
     pytest-pydocstyle
     pytest-pylint
