--- a/{{cookiecutter.project_name}}/mypy.ini
+++ b/{{cookiecutter.project_name}}/mypy.ini
@@ -1,5 +1,6 @@
 #
 
+
 [mypy]
 files = *.py, src/**/*.py, test/**/*.py
 show_error_codes = True
@@ -12,7 +13,13 @@ warn_unused_ignores = True
 [mypy-importlib_metadata.*]
 ignore_missing_imports = True
 
+[mypy-pyramid.*]
+ignore_missing_imports = True
+
 [mypy-setuptools.*]
+ignore_missing_imports = True
+
+[mypy-webtest.*]
 ignore_missing_imports = True
 
 
