--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -12,7 +12,9 @@ isolated_build = True
 
 [testenv]
 commands =
-    make review
+    # Run review under Python 3.8 as it also includes linting and type checking
+    py38: make review
+    !py38: make test
 extras =
     dev_test
 whitelist_externals =
@@ -20,6 +22,7 @@ whitelist_externals =
 
 
 [testenv:py39]
+description = Outcome is ignored since Python 3.9 is not released yet
 ignore_outcome = True
 
 
@@ -31,6 +34,8 @@ extras =
 
 
 [testenv:develop]
+description = Use this environment for interactive development use (activate)
+#
 commands =
 extras =
     dev_package
