Set 'basepython' in 'tox.ini'

--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -7,10 +7,12 @@ envlist =
     py37
     py38
     py39
+ignore_basepython_conflict = True
 isolated_build = True
 
 
 [testenv]
+basepython = python3.8
 commands =
     # Run review under Python 3.8 as it also includes linting and type checking
     py38: make review
