Use pip for editable installation

--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -14,7 +14,7 @@ refresh: clean develop review package
 
 .PHONY: develop
 develop:
-	python3 setup.py develop
+	python3 -m pip install --editable .
 
 
 .PHONY: package
