Add strict options for pytest

--- a/{{cookiecutter.project_name}}/pytest.ini
+++ b/{{cookiecutter.project_name}}/pytest.ini
@@ -5,6 +5,8 @@
 addopts =
     --disable-pytest-warnings
     --pylint-error-types='CEFIRW'
+    --strict-config
+    --strict-markers
     --yapfdiff
 
 
