Migrate to `pyproject.toml` and GitHub Actions
Migrate package metadata to `[project]` in `pyproject.toml`.
Migrate from *Travis CI* to *GitHub Actions*.
Use `build` instead of `setup.py sdist` and `setup.py bdist_wheel`.
Use dashes `-` instead of underscores `_` in extra names.
Use `python` instead of `python3`.
Use `pip install --editable .` instead of `setup.py develop`.
Use the oldest supported Python (3.8) as base Python.
And other various updates.

--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -8,4 +8,43 @@ requires = [
 ]
 
 
+[project]
+name = "{{cookiecutter.project_name}}"
+#
+dependencies = [
+]
+optional-dependencies.dev-package = [
+    "build",
+    "twine",
+]
+optional-dependencies.dev-test = [
+    "mypy",
+    "pycodestyle",
+    "pydocstyle",
+    "pylint",
+    "pytest",
+    "pytest-mypy",
+    "pytest-pycodestyle",
+    "pytest-pydocstyle",
+    "pytest-pylint",
+    "pytest-yapf3",
+    "yapf",
+]
+requires-python = ">=3.8"
+#
+authors = [
+    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.author_email}}" },
+]
+description = "{{cookiecutter.project_name}} library"
+license.text = "Apache-2.0"
+readme = "README.rst"
+urls.PyPI = "https://pypi.org/project/{{cookiecutter.project_name}}/"
+urls.GitHub = "https://github.com/{{cookiecutter.author}}/{{cookiecutter.project_name}}"
+urls.GitLab = "https://gitlab.com/{{cookiecutter.author}}/{{cookiecutter.project_name}}"
+#
+dynamic = [
+    "version",
+]
+
+
 # EOF
