--- a/{{cookiecutter.project_name}}/mypy.ini
+++ b/{{cookiecutter.project_name}}/mypy.ini
@@ -2,7 +2,11 @@
 
 
 [mypy]
+check_untyped_defs = True
+disallow_any_unimported = True
+disallow_untyped_defs = True
 files = *.py, src/**/*.py, test/**/*.py
+no_implicit_optional = True
 show_error_codes = True
 strict = True
 warn_return_any = True
