--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -2,46 +2,49 @@
 
 
 [tox]
-envlist =
-    py38
-    py39
+env_list =
+    py3.8
+    py3.9
+    py3.10
+    py3.11
 isolated_build = True
+min_version = 4.2.7  # https://github.com/tox-dev/tox/pull/2849
+skip_missing_interpreters = False
 
 
 [testenv]
 commands =
-    # Run review under Python 3.9 as it also includes linting and type checking
-    py39: make review
-    !py39: make test
+    py3.8: make review  # More complete code review (including linting)
+    !py3.8: make test
 extras =
-    dev_test
-whitelist_externals =
+    dev-test
+allowlist_externals =
     make
 
 
-[testenv:py310]
-description = Outcome is ignored since Python 3.10 is not released yet
+[testenv:py312]
+description = Outcome is ignored since Python 3.12 is not released yet
 #
 ignore_outcome = True
 
 
 [testenv:package]
-basepython = python3.9
+base_python = python3.8
 commands =
     make package
 extras =
-    dev_package
+    dev-package
 
 
 [testenv:develop]
 description = Activate this environment for interactive development
 #
-basepython = python3.9
+base_python = python3.8
 commands =
 extras =
-    dev_package
-    dev_test
-usedevelop = True
+    dev-package
+    dev-test
+use_develop = True
 
 
 # EOF
