--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -40,7 +40,7 @@ format:
 
 .PHONY: lint
 lint:
-	python -m pytest --mypy --pycodestyle --pydocstyle --pylint -m 'mypy or pycodestyle or pydocstyle or pylint'
+	python -m pytest --pycodestyle --pydocstyle --pylint --yapf -m 'pycodestyle or pydocstyle or pylint or yapf'
 
 
 .PHONY: mypy
@@ -79,7 +79,7 @@ pytest:
 
 .PHONY: review
 review:
-	python -m pytest --mypy --pycodestyle --pydocstyle --pylint
+	python -m pytest --mypy --pycodestyle --pydocstyle --pylint --yapf
 
 
 .PHONY: clean
